--- a/app.ipynb
+++ b/app.ipynb
@@ -1471,121 +1471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\ops\\operation.py\", line 234, in from_config\n",
-      "    return cls(**config)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\layers\\convolutional\\depthwise_conv2d.py\", line 120, in __init__\n",
-      "    super().__init__(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\layers\\convolutional\\base_depthwise_conv.py\", line 106, in __init__\n",
-      "    super().__init__(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\layers\\layer.py\", line 287, in __init__\n",
-      "    raise ValueError(\n",
-      "ValueError: Unrecognized keyword arguments passed to DepthwiseConv2D: {'groups': 1}\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\marcc\\AppData\\Local\\Temp\\ipykernel_18452\\1652605399.py\", line 27, in classificar_imagem\n",
-      "    model = load_model(model_path)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\saving\\saving_api.py\", line 196, in load_model\n",
-      "    return legacy_h5_format.load_model_from_hdf5(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\legacy_h5_format.py\", line 133, in load_model_from_hdf5\n",
-      "    model = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 495, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\sequential.py\", line 350, in from_config\n",
-      "    layer = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 495, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\sequential.py\", line 350, in from_config\n",
-      "    layer = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 495, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\model.py\", line 582, in from_config\n",
-      "    return functional_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\functional.py\", line 551, in functional_from_config\n",
-      "    process_layer(layer_data)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\functional.py\", line 519, in process_layer\n",
-      "    layer = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 504, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(cls_config)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\ops\\operation.py\", line 236, in from_config\n",
-      "    raise TypeError(\n",
-      "TypeError: Error when deserializing class 'DepthwiseConv2D' using config={'name': 'expanded_conv_depthwise', 'trainable': True, 'dtype': 'float32', 'kernel_size': [3, 3], 'strides': [1, 1], 'padding': 'same', 'data_format': 'channels_last', 'dilation_rate': [1, 1], 'groups': 1, 'activation': 'linear', 'use_bias': False, 'bias_initializer': {'class_name': 'Zeros', 'config': {}}, 'bias_regularizer': None, 'activity_regularizer': None, 'bias_constraint': None, 'depth_multiplier': 1, 'depthwise_initializer': {'class_name': 'VarianceScaling', 'config': {'scale': 1, 'mode': 'fan_avg', 'distribution': 'uniform', 'seed': None}}, 'depthwise_regularizer': None, 'depthwise_constraint': None}.\n",
-      "\n",
-      "Exception encountered: Unrecognized keyword arguments passed to DepthwiseConv2D: {'groups': 1}\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\ops\\operation.py\", line 234, in from_config\n",
-      "    return cls(**config)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\layers\\convolutional\\depthwise_conv2d.py\", line 120, in __init__\n",
-      "    super().__init__(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\layers\\convolutional\\base_depthwise_conv.py\", line 106, in __init__\n",
-      "    super().__init__(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\layers\\layer.py\", line 287, in __init__\n",
-      "    raise ValueError(\n",
-      "ValueError: Unrecognized keyword arguments passed to DepthwiseConv2D: {'groups': 1}\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\marcc\\AppData\\Local\\Temp\\ipykernel_18452\\1652605399.py\", line 27, in classificar_imagem\n",
-      "    model = load_model(model_path)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\saving\\saving_api.py\", line 196, in load_model\n",
-      "    return legacy_h5_format.load_model_from_hdf5(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\legacy_h5_format.py\", line 133, in load_model_from_hdf5\n",
-      "    model = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 495, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\sequential.py\", line 350, in from_config\n",
-      "    layer = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 495, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\sequential.py\", line 350, in from_config\n",
-      "    layer = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 495, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\model.py\", line 582, in from_config\n",
-      "    return functional_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\functional.py\", line 551, in functional_from_config\n",
-      "    process_layer(layer_data)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\models\\functional.py\", line 519, in process_layer\n",
-      "    layer = saving_utils.model_from_config(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\saving_utils.py\", line 85, in model_from_config\n",
-      "    return serialization.deserialize_keras_object(\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\legacy\\saving\\serialization.py\", line 504, in deserialize_keras_object\n",
-      "    deserialized_obj = cls.from_config(cls_config)\n",
-      "  File \"c:\\Users\\marcc\\anaconda3\\envs\\trabalho_libras_uninter\\lib\\site-packages\\keras\\src\\ops\\operation.py\", line 236, in from_config\n",
-      "    raise TypeError(\n",
-      "TypeError: Error when deserializing class 'DepthwiseConv2D' using config={'name': 'expanded_conv_depthwise', 'trainable': True, 'dtype': 'float32', 'kernel_size': [3, 3], 'strides': [1, 1], 'padding': 'same', 'data_format': 'channels_last', 'dilation_rate': [1, 1], 'groups': 1, 'activation': 'linear', 'use_bias': False, 'bias_initializer': {'class_name': 'Zeros', 'config': {}}, 'bias_regularizer': None, 'activity_regularizer': None, 'bias_constraint': None, 'depth_multiplier': 1, 'depthwise_initializer': {'class_name': 'VarianceScaling', 'config': {'scale': 1, 'mode': 'fan_avg', 'distribution': 'uniform', 'seed': None}}, 'depthwise_regularizer': None, 'depthwise_constraint': None}.\n",
-      "\n",
-      "Exception encountered: Unrecognized keyword arguments passed to DepthwiseConv2D: {'groups': 1}\n"
+      "Modelo carregado de: models/model (1).h5\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 574ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 62ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n"
      ]
     }
    ],
